# experiment_Alicia_duo_control

./: LICENSE  README.md
alicia_duo_descriptions/urdf/: alicia_gripper_ros2control.urdf
alicia_duo_moveit/config/: ros2_controllers.yaml
alicia_duo_moveit/launch/: move_group.launch.py  moveit_rviz.launch.py  real_robot_launch_rviz.py
alicia_duo_ros_control/: CMakeLists.txt  package.xml  plugin.xml
alicia_duo_ros_control/include/alicia_duo_ros_control/: alicia_hardware_interface.hpp
alicia_duo_ros_control/src/: alicia_hardware_interface.cpp
