<?xml version="1.0"?>
<package format="3">
  <name>alicia_duo_ros_control</name>
  <version>0.1.0</version>
  <description>Hardware interface for Alicia robot using ros2_control</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin_manifest="plugin.xml"/>
  </export>
</package>
